# civica

./: .gitignore  Makefile  README.md  conversational_query.py  main.py  pyproject.toml  query.py  requirements.txt
agentic_pipeline/: run_agent.py
db/: chroma_client.py  db_client.py
evaluation/: llm_critique.py
ingestion/: ingest_local.py  ingest_web.py  load_all_data.py
langgraph_pipeline/: build_graph.py
langgraph_pipeline/nodes/: answer.py  rephrase.py  rerank.py  retrieve.py
models/: groq_client.py
rerankers/: cross_encoder.py
retrieval/: retriever.py
tools/: answer_tool.py  registry.py  rephrase_tool.py  rerank_tool.py  retrieve_tool.py
