[project]
name = "civica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.13",
    "groq>=0.29.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-huggingface>=0.3.0",
    "langgraph>=0.5.3",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.46.1",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "unstructured>=0.18.1",
]
